updated html content

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,8 +23,8 @@
     <canvas id="animation-canvas" width="400" height="300"></canvas>
 
     <script type="module">
-        import init from '../pkg/animations_2d.js';
-
+        import init from ''; // replace with your pkg folder
+        
         async function run() {
             await init();
         }
